# Bang_tinh

./: .coveragerc  .env.example  .gitattributes  .gitignore  .gitmodules  .secret_key  CHANGELOG.md  LICENSE.txt  README.md  ROADMAP.md  STRUCTURE_GUIDE.md  android_setup_guide.py  app_window.py  config.py  fix_table_layout.py  main.py  main_qt.py  process_icon.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_audit.py  storage.db  test_border.py  test_notification.py  test_notification_server.py  test_parser_bug.py  test_regex.py  test_voice.py  test_voice_full.py  verify_qr_connection.py  version_info.txt  warehouse_app.spec  warehouse_app_optimized.spec
.github/workflows/: README.md  android-build.yml  build-desktop.yml  ci-cd.yml  version.yml
.kiro/specs/production-ready-refactoring/: design.md  requirements.md  tasks.md
.kiro/steering/: no-documentation-files.md
app/core/: paths.py
archive/: app_window.py
archive/android_notifier/: .gitignore  BUILD_INSTRUCTIONS.txt  build_apk.bat  settings.gradle
archive/android_notifier/app/: build.gradle  proguard-rules.pro
archive/legacy_v1/: app_window.py  config.py  main.py  main_window_wip.py  process_icon.py  ui_theme_design_tokens.py
archive/legacy_v1/qml/: Theme.qml
archive/legacy_v1/scripts/: test_vietin_parsing.py  unified_tester.py
audit/: __init__.py  analyzer.py  architecture_analyzer.py  quality_analyzer.py  reporters.py  security_analyzer.py
audit_reports/: audit_report.html  audit_report.json
config/: app.yaml  logging.yaml
core/: __init__.py  config.py  constants.py  container.py  exceptions.py  interfaces.py  license.py  models.py  security.py  updater.py
data/: __init__.py
database/: __init__.py  base_repository.py  connection.py  connection_pool.py  migrations.py  models.py  repositories.py  task_models.py  task_repository.py
examples/: theme_usage_example.py
exports/: .gitkeep
installer/: info_before.txt  setup.iss
legacy/: __init__.py
network/: notification_handler.py  notification_server.py
qml/: Theme.qml  main.qml  qmldir
qml/components/: AlertPanel.qml  ConfirmDialog.qml  DataTable.qml  LoadingSpinner.qml  NotificationBanner.qml  NotificationToast.qml  QuickBankPeek.qml  SearchField.qml  StatusIndicator.qml
qml/dialogs/: HistoryDetailDialog.qml  ProductDialog.qml  SaveSessionDialog.qml  TaskDialog.qml
qml/views/: BankView.qml  CalculationView.qml  CalculatorToolView.qml  HistoryView.qml  ProductView.qml  SettingsView.qml  StockView.qml  TaskView.qml
runtime/: __init__.py  bootstrap.py  crash_handler.py  healthcheck.py  lifecycle.py  profiler.py  watchdog.py
scripts/: build.py  monitor_android_log.py  run_audit.py  test_android_notification.py  test_build.py  test_notification.py  test_notification_batch.py  test_notification_universal.py  test_sender_extraction.py  test_vietin_parsing.py  unified_tester.py  version.py
scripts/examples/: theme_usage_example.py
scripts/examples/examples/: theme_usage_example.py
services/: __init__.py  alert_service.py  backup_service.py  bank_parser.py  calculator.py  command_service.py  exporter.py  notification_service.py  report_service.py  tts_service.py
src/app/core/: paths.py  project_structure.py
src/audit/: analyzer.py  reporters.py  security_analyzer.py
src/config/: audio_settings.json  bank_profiles.json  bank_settings.json  tunnel_state.json
src/core/: config.py  constants.py  security.py
src/database/: __init__.py  connection.py  migrations.py  task_repository.py
src/runtime/: bootstrap.py  crash_handler.py  lifecycle.py
src/services/: backup_service.py  bank_parser.py  calculator.py  exporter.py  notification_service.py  tts_service.py
src/ui/: main_window.py  qt_theme.py  theme.py
src/utils/: log_sanitizer.py  logging.py
src/viewmodels/: bank_vm.py  base_viewmodel.py  calculation_vm.py  calculator_tool_vm.py  history_vm.py  list_models.py  settings_vm.py  stock_vm.py  task_vm.py
src/wms/: __init__.py  __main__.py
src/wms/ui/: dpi.py  (+3 more)
src/workers/: backup_worker.py  base_worker.py  notification_worker.py
tests/: check_button.py  check_error.py  check_fp.py  check_overlay.py  check_overlay_v2.py  check_tabs.py  conftest.py  debug_output.txt  debug_picker_hierarchy.py  debug_run.py  find_misplaced_picker.py  find_misplaced_picker_v2.py  minimal_app.py  overlay_debug.txt  reproduce_error.py  requirements.txt  test_filepicker.py  test_filepicker_methods.py  test_flet.py  test_formatters.py  test_nav.py  test_no_error.py  test_picker_async.py  test_picker_debug.py  test_picker_simple.py  test_simple_picker.py  test_storage.db  test_tabs.py  trace_error.py
tests/integration/: test_database.py
tests/property/: test_architecture_compliance.py  test_audit_properties.py  test_coverage_properties.py  test_data_layer_properties.py  test_security_properties.py
tests/security/: __init__.py  test_http_security.py  test_sql_injection.py
tests/unit/: test_calculator_service.py  test_core_infrastructure.py  test_formatters.py
ui/: __init__.py  main_window.py  main_window_with_workers.py  qt_theme.py  theme.py
ui/components/: __init__.py  data_table.py  dialogs.py  input_field.py  product_card.py
ui/qt_views/: __init__.py  calculation_view.py  calculator_tool_view.py  history_view.py  product_dialog.py  product_view.py  settings_view.py  stock_view.py  task_view.py
ui/views/: __init__.py  bank_view.py  calculation_view.py  history_view.py  product_view.py  settings_view.py  stock_view.py
ui/widgets/: alert_panel.py  data_table.py  loading_spinner.py  notification_banners.py  notification_toast.py  quick_bank_peek.py  status_indicator.py
utils/: __init__.py  error_handler.py  formatters.py  log_sanitizer.py  logging.py  validators.py
viewmodels/: __init__.py  app_vm.py  bank_vm.py  calculation_vm.py  calculator_tool_vm.py  history_vm.py  list_models.py  product_vm.py  settings_vm.py  stock_vm.py  task_vm.py
workers/: backup_worker.py  base_worker.py  export_worker.py  notification_processor.py  notification_worker.py
(+130 files in other folders)
